--- a/index.html
+++ b/index.html
@@ -176,6 +176,48 @@
                 </div>
             </div>
         </section>
+        <!--- section-3 -->
+        <section>
+            <div class="column">
+                <h2>Esegui piu operazioni con Dropbox business</h2>
+                <div class="container">
+                    <div class="column">
+                        <img src="./assets/8_dropbox_img/img/business-feature-switching-tools.png" alt="">
+                        <h3>Passa di meno da uno strumento all'altro</h3>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Similique officia sapiente culpa hic, commodi sed, iusto quis sequi quos eum pariatur? Ipsum voluptates hic harum autem quo nesciunt eum dolorem?</p>
+                    </div class="column">
+                    <div >
+                        <img src="./assets/8_dropbox_img/img/business-feature-send-files-it.png" alt="">
+                        <h3>Passa di meno da uno strumento all'altro</h3>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Similique officia sapiente culpa hic, commodi sed, iusto quis sequi quos eum pariatur? Ipsum voluptates hic harum autem quo nesciunt eum dolorem?</p>
+                    </div>
+                    <div class="column">
+                        <img src="./assets/8_dropbox_img/img/business-feature-coordinate-it.png" alt="">
+                        <h3>Passa di meno da uno strumento all'altro</h3>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Similique officia sapiente culpa hic, commodi sed, iusto quis sequi quos eum pariatur? Ipsum voluptates hic harum autem quo nesciunt eum dolorem?</p>
+                    </div>
+                </div>
+                <div class="container flex">    
+                    <div class="column"> 
+                        <img src="./assets/8_dropbox_img/img/business-feature-integrations-it.png" alt="">
+                        <h3>Passa di meno da uno strumento all'altro</h3>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Similique officia sapiente culpa hic, commodi sed, iusto quis sequi quos eum pariatur? Ipsum voluptates hic harum autem quo nesciunt eum dolorem?</p>
+                    </div>
+                    <div class="column">
+                        <img src="./assets/8_dropbox_img/img/business-feature-multi-device.png" alt="">
+                        <h3>Passa di meno da uno strumento all'altro</h3>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Similique officia sapiente culpa hic, commodi sed, iusto quis sequi quos eum pariatur? Ipsum voluptates hic harum autem quo nesciunt eum dolorem?</p>
+                    </div>
+                    <div class="column">
+                        <img src="./assets/8_dropbox_img/img/business-feature-security.png" alt="">
+                        <h3>Passa di meno da uno strumento all'altro</h3>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Similique officia sapiente culpa hic, commodi sed, iusto quis sequi quos eum pariatur? Ipsum voluptates hic harum autem quo nesciunt eum dolorem?</p>
+                    </div>
+                </div>   
+            </div>
+        </section>
+        
+
         
 
 
