--- a/index.html
+++ b/index.html
@@ -167,20 +167,20 @@
 
         <!-- section-2 -->
         <section>
-            <div class="container">
+            <div class="container-box-2 flex">
                 <img class="" src="./assets/8_dropbox_img/img/partner.png" alt="">
-                <div class="column">
+                <div class="column box-section-2">
                     <h3 class="">Entra in contatto con un partner dropbox</h3>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa saepe ex doloribus deserunt quibusdam fuga earum laborum commodi minus sapiente rerum, voluptatibus amet! Impedit exercitationem, ut vitae veritatis molestiae deleniti?</p>
-                    <input class="" type="button" value="Trova un partner">
+                    <input class="button-section-2" type="button" value="Trova un partner">
                 </div>
             </div>
         </section>
         <!--- section-3 -->
         <section>
-            <div class="column">
+            <div class="container-box-3 column">
                 <h2>Esegui piu operazioni con Dropbox business</h2>
-                <div class="container">
+                <div class="container-section-3-top flex">
                     <div class="column">
                         <img src="./assets/8_dropbox_img/img/business-feature-switching-tools.png" alt="">
                         <h3>Passa di meno da uno strumento all'altro</h3>
@@ -197,7 +197,7 @@
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Similique officia sapiente culpa hic, commodi sed, iusto quis sequi quos eum pariatur? Ipsum voluptates hic harum autem quo nesciunt eum dolorem?</p>
                     </div>
                 </div>
-                <div class="container flex">    
+                <div class="container-section-3-bottom flex">    
                     <div class="column"> 
                         <img src="./assets/8_dropbox_img/img/business-feature-integrations-it.png" alt="">
                         <h3>Passa di meno da uno strumento all'altro</h3>
