--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <input class="blue-button button-large" type="button" value="Inizia la tua prova gratuita">
                 <span>Annulla in qualsiasi momento</span>
                 <span class="arrow-down"><i class="fa-solid fa-arrow-down"></i></span>
-                <div><img class="img-header" src="assets/8_dropbox_img/img/jumbo.png" alt=""></div>
+                <div><img class="img-header" src="" alt=""></div>
             </div>
         </div>
 
@@ -55,8 +55,8 @@
             
             <h2>Trova il piano business che fa per te</h2> 
             <div class="flex container-input">
-                <span><input type="checkbox">Fatturazione mensile</span>
-                <span><input type="checkbox">Fatturazione annuale</span>
+                <span><input type="radio">Fatturazione mensile</span>
+                <span><input type="radio">Fatturazione annuale</span>
             </div>    
             <div class="container-box-1 flex">
                 <div class="column">
