image jumbo remake

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <input class="blue-button button-large" type="button" value="Inizia la tua prova gratuita">
                 <span>Annulla in qualsiasi momento</span>
                 <span class="arrow-down"><i class="fa-solid fa-arrow-down"></i></span>
-                <div><img class="img-header" src="" alt=""></div>
+                <div class="jumbo"><img class="img-header" src="./assets/8_dropbox_img/img/jumbo.png" alt=""></div>
             </div>
         </div>
 
